--- a/collaboration-ar.html
+++ b/collaboration-ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" class="no-js">
+<html lang="ar" class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -24,46 +24,47 @@
 </head>
 
 <body
-    class="home page-template-default page page-id-2039 gdlr-core-body woocommerce-no-js tribe-no-js kingster-body kingster-body-front kingster-full  kingster-with-sticky-navigation  kingster-blockquote-style-1 gdlr-core-link-to-lightbox">
+    class="home ar-font page-template-default page page-id-2039 gdlr-core-body woocommerce-no-js tribe-no-js kingster-body kingster-body-front kingster-full  kingster-with-sticky-navigation  kingster-blockquote-style-1 gdlr-core-link-to-lightbox">
     <div class="kingster-mobile-header-wrap">
-        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation" id="kingster-mobile-header" style="display: block;">
+        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation"
+            id="kingster-mobile-header" style="display: block;">
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
                         <a class="" href="index.html"><img src="img/raffles-logo2.png" alt=""></a>
                     </div>
                 </div>
-                <div class="kingster-mobile-menu-right">
+                <div class="kingster-mobile-menu"><a
+                        class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
+                        href="#kingster-mobile-menu"><span></span></a>
+                    <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
+                        data-slide="right">
+                        <ul id="menu-main-navigation" class="m-menu">
+                            <li class="menu-item"><a href="index-ar.html">الرئيسية</a>
 
-                    <div class="kingster-mobile-menu"><a
-                            class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
-                            href="#kingster-mobile-menu"><span></span></a>
-                        <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
-                            data-slide="right">
-                            <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home "><a href="index.html">Home</a>
+                            </li>
+                            <li class="menu-item menu-item-home"><a href="about-us-ar.html">من نحن</a>
 
-                                </li>
-                                <li class="menu-item"><a href="about-us.html">About us</a>
+                            </li>
+                            <li class="menu-item "><a href="services-ar.html">خدماتنا</a>
+                            </li>
+                            <li class="menu-item"><a href="programs-ar.html">البرامج</a>
+                            </li>
 
-                                </li>
-                                <li class="menu-item"><a href="services.html">Services</a>
-                                </li>
-                                <li class="menu-item "><a href="programs.html">Programs</a>
-                                </li>
-
-                                <li class="menu-item"><a href="scholarships.html">Scholarships</a></li>
-                                <li class="menu-item"><a href="admission.html">Admission</a></li>
-                                <li class="menu-item"><a href="lifeinriyadh.html">Life in Riyadh</a></li>
-                                <li class="menu-item current-menu-item"><a href="collaboration.html">Collaboration</a></li>
-                                <li class="menu-item"><a href="gallery.html">Gallery</a></li>
-                                <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                            </ul>
-                        </div>
+                            <li class="menu-item"><a href="scholarships-ar.html">المنح الدراسية</a>
+                            </li>
+                            <li class="menu-item"><a href="admission-ar.html">تسجيل</a></li>
+                            <li class="menu-item"><a href="lifeinriyadh-ar.html">Life in Riyadh</a></li>
+                            <li class="menu-item current-menu-item"><a href="collaboration-ar.html">Collaboration</a>
+                            </li>
+                            <li class="menu-item"><a href="gallery-ar.html">المعرض</a></li>
+                            <li class="menu-item"><a href="contact-ar.html">تواصل معنا</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <div class="kingster-body-outer-wrapper ">
         <div class="kingster-body-wrapper clearfix  kingster-with-frame">
@@ -75,18 +76,18 @@
                                 style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
                                 href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                                                       <a href="tel:+966552995509">+966 55 299 5509</a>
+                            <a href="tel:+966552995509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <div class="kingster-top-bar-right-social"></div>
-                            <a class="kingster-top-bar-right-button" href="lifeinriyadh.html">Life In Riyadh</a>
-                            <a class="kingster-top-bar-right-button active-btn "
-                                href="collaboration.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button" href="gallery.html">Gallery</a>
+                            <a class="kingster-top-bar-right-button" href="lifeinriyadh-ar.html">الحياة في الرياض</a>
+                            <a class="kingster-top-bar-right-button  active-btn"
+                                href="collaboration-ar.html">Collaboration</a>
+                            <a class="kingster-top-bar-right-button" href="gallery-ar.html">المعرض</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
-                                            width="35" alt=""></a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="index.html"><img
+                                            src="img/uk-flag.png" width="35" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
@@ -98,37 +99,43 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr pbtm">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
                             </div>
                         </div>
-                        <div class="kingster-navigation kingster-item-pdlr clearfix ">
-                            <div class="kingster-main-menu" id="kingster-main-menu">
+                        <div class="kingster-navigation kingster-item-pdlr clearfix " style="float: left;">
+                            <div class="kingster-main-menu sf-js-enabled sf-arrows" id="kingster-main-menu"
+                                style="touch-action: pan-y;">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
-                                    <li class="menu-item menu-item-home kingster-normal-menu">
-                                        <a href="index.html" class="sf-with-ul-pre">Home</a>
-                                    </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="about-us.html"
-                                            class="sf-with-ul-pre">About Us</a>
-                                    </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="services.html"
-                                            class="sf-with-ul-pre">Services</a>
+                                    <li class="menu-item kingster-normal-menu"><a href="contact-ar.html">تواصل معنا
+                                        </a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="admission-ar.html">تسجيل
+                                        </a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="scholarships-ar.html">المنح
+                                            الدراسية</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu">
-                                        <a href="programs.html" class="sf-with-ul-pre">Programs</a>
+                                        <a href="programs-ar.html" class="sf-with-ul-pre">البرامج</a>
+
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a
-                                            href="scholarships.html">Scholarships</a>
+                                    <li class="menu-item kingster-normal-menu"><a href="services-ar.html"
+                                            class="sf-with-ul-pre">خدماتنا</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
-                                        </a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
-                                        </a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="about-us-ar.html"
+                                            class="sf-with-ul-pre">من نحن</a>
+
+                                    </li>
+                                    <li class="menu-item kingster-normal-menu">
+                                        <a href="index-ar.html" class="sf-with-ul-pre">الرئيسية</a>
+                                    </li>
+
                                 </ul>
-                                <div class="kingster-navigation-slide-bar" id="kingster-navigation-slide-bar"></div>
+                                <div class="kingster-navigation-slide-bar" id="kingster-navigation-slide-bar"
+                                    style="width: 45px;left: 600px;display: block;overflow: hidden;"></div>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -150,13 +157,12 @@
                                     <div
                                         class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title4"
-                                                style="font-size: 55px ;font-weight: 300 ;letter-spacing: 0px ;text-transform: uppercase ;color: #EB8223 ;background-color: white;padding: 20px 40px 20px 40px;">
-                                                SUCCESS PARTNERS</h3>
+                                            <h3
+                                                class="gdlr-core-title-item-title gdlr-core-skin-title title4 collab-ar">
+                                                شــركــاء الــنــجــاح</h3>
                                         </div><span
-                                            class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption title6"
-                                            style="font-size: 35px ;font-style: normal ;color: #f2f2f2 ;margin-top: 25px ;">OUR
-                                            JOURNEY IS JUST BEGINNING.
+                                            class="collab-ar2 gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption title6">
+                                            رحــلــتــنــا هــي الــبــدايــة فــقــط.
                                         </span>
                                     </div>
                                     <hr class="custom-hr">
@@ -175,15 +181,11 @@
                                                 <div
                                                     class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <p class="p-about3 text6" style="font-size: 1.4rem;">
-                                                            At Raffles Design Institute, we are always forming
-                                                            agreements with
-                                                            influential companies and organizations in order to express
-                                                            support
-                                                            for fields we are passionate about concerning design,
-                                                            education,
-                                                            and social welfare and to broaden the horizons of our
-                                                            students.
+                                                        <p class="p-about3 text6 collab-ar3 ar-float">
+                                                            في معهد رافلز للتصميم، نعمل دائماً على عقد اتفاقيات مع
+                                                            الشركات والمؤسسات المؤثرة من أجل التعبير عن دعمنا للمجالات
+                                                            التي نتحمس لها فيما يتعلق بالتصميم والتعليم والرعاية
+                                                            الإجتماعية ولتوسيع آفاق طالباتنا.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -547,13 +549,9 @@
                                                 <div
                                                     class="gdlr-core-title-item  clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title3"
-                                                            style="font-size: 38px;
-                                                        font-weight: 500;
-                                                        letter-spacing: 0px;
-                                                        text-transform: uppercase;
-                                                        color: #EB8223;
-                                                        padding: 0px 40px 60px 40px;">SISTER COMPANIES</h3>
+                                                        <h3
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title title3 sis-co-ar">
+                                                            الـشـركـات الـشـقـيـقـة</h3>
                                                     </div>
                                                     <div class="gdlr-core-gallery-item-holder gdlr-core-js-2 clearfix centerdiv2"
                                                         data-layout="fitrows">
@@ -625,8 +623,10 @@
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
-                                        <li class="menu-item"><a href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -652,7 +652,9 @@
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office No.25, Home Offices,
+                                        <li class="menu-item"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office
+                                                No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
                                                 Riyadh, Saudi Arabia</a></li>
                                     </ul>
