--- a/gallery-ar.html
+++ b/gallery-ar.html
@@ -101,7 +101,7 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr pbtm">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
