--- a/index.html
+++ b/index.html
@@ -88,15 +88,10 @@
                             <a href="tel:+966552995509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
-                            <!-- <ul id="kingster-top-bar-menu"
-                                        class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                        <li class="menu-item kingster-normal-menu"><a href="#">Life In Riyadh</a></li>
-                                        <li class="menu-item kingster-normal-menu"><a href="collaboration.html">Collaboration</a></li>
-                                    </ul> -->
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh.html">Life In Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button active-btn" href="gallery.html">Gallery</a>
+                            <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
