--- a/lifeinriyadh-ar.html
+++ b/lifeinriyadh-ar.html
@@ -282,11 +282,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
-                                class="fa fa-phone"
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
+                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                                                       <a href="tel:+966552995509">+966 55 299 5509</a>
-                                </div>
+                            <a href="tel:+966552995509">+966 55 299 5509</a>
+                        </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -294,13 +294,14 @@
                                         <li class="menu-item kingster-normal-menu"><a href="collaboration.html">Collaboration</a></li>
                                     </ul> -->
                             <div class="kingster-top-bar-right-social"></div>
-                            <a class="kingster-top-bar-right-button active-btn" href="lifeinriyadh.html">Life In Riyadh</a>
+                            <a class="kingster-top-bar-right-button active-btn" href="lifeinriyadh.html">Life In
+                                Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
                             <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img
-                                            src="img/sa-flag.png" width="35" alt=""></a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
+                                            width="35" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
@@ -312,7 +313,7 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr pbtm">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
@@ -520,7 +521,8 @@
                                                     List 2</a></li>
                                         </ul>
                                     </li> -->
-                                    <li class="menu-item kingster-normal-menu"><a href="scholarships.html">Scholarships</a>
+                                    <li class="menu-item kingster-normal-menu"><a
+                                            href="scholarships.html">Scholarships</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
@@ -635,11 +637,11 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/lifeinriyadh/1-01.webp"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
-                                                            data-bgposition="center center" data-bgfit="cover"
-                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
-                                                            data-no-retina>
+                                                        data-param10="" data-description=""> <img
+                                                            src="img/lifeinriyadh/1-01.webp" alt="" title="slider-hp2-2"
+                                                            width="1800" height="958" data-bgposition="center center"
+                                                            data-bgfit="cover" data-bgrepeat="no-repeat"
+                                                            class="rev-slidebg" data-no-retina>
                                                         <!-- <div class="tp-caption   tp-resizeme" id="slide-6-layer-1"
                                                             data-x="536" data-y="center" data-voffset="-114"
                                                             data-width="['auto']" data-height="['auto']"
@@ -688,11 +690,11 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/lifeinriyadh/1-02.png"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
-                                                            data-bgposition="center center" data-bgfit="cover"
-                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
-                                                            data-no-retina>
+                                                        data-param10="" data-description=""> <img
+                                                            src="img/lifeinriyadh/1-02.png" alt="" title="slider-hp2-2"
+                                                            width="1800" height="958" data-bgposition="center center"
+                                                            data-bgfit="cover" data-bgrepeat="no-repeat"
+                                                            class="rev-slidebg" data-no-retina>
                                                         <!-- <div class="tp-caption   tp-resizeme" id="slide-7-layer-1"
                                                             data-x="center" data-hoffset="" data-y="center"
                                                             data-voffset="-120" data-width="['auto']"
@@ -747,11 +749,11 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/lifeinriyadh/1-03.png"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
-                                                            data-bgposition="center center" data-bgfit="cover"
-                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
-                                                            data-no-retina>
+                                                        data-param10="" data-description=""> <img
+                                                            src="img/lifeinriyadh/1-03.png" alt="" title="slider-hp2-2"
+                                                            width="1800" height="958" data-bgposition="center center"
+                                                            data-bgfit="cover" data-bgrepeat="no-repeat"
+                                                            class="rev-slidebg" data-no-retina>
                                                         <!-- <div class="tp-caption   tp-resizeme" id="slide-8-layer-1"
                                                             data-x="center" data-hoffset="" data-y="center"
                                                             data-voffset="106" data-width="['auto']"
@@ -804,11 +806,11 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/lifeinriyadh/1-04.png"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
-                                                            data-bgposition="center center" data-bgfit="cover"
-                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
-                                                            data-no-retina>
+                                                        data-param10="" data-description=""> <img
+                                                            src="img/lifeinriyadh/1-04.png" alt="" title="slider-hp2-2"
+                                                            width="1800" height="958" data-bgposition="center center"
+                                                            data-bgfit="cover" data-bgrepeat="no-repeat"
+                                                            class="rev-slidebg" data-no-retina>
                                                         <!-- <div class="tp-caption   tp-resizeme" id="slide-8-layer-1"
                                                             data-x="center" data-hoffset="" data-y="center"
                                                             data-voffset="106" data-width="['auto']"
@@ -861,11 +863,11 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/lifeinriyadh/1-05.png"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
-                                                            data-bgposition="center center" data-bgfit="cover"
-                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
-                                                            data-no-retina>
+                                                        data-param10="" data-description=""> <img
+                                                            src="img/lifeinriyadh/1-05.png" alt="" title="slider-hp2-2"
+                                                            width="1800" height="958" data-bgposition="center center"
+                                                            data-bgfit="cover" data-bgrepeat="no-repeat"
+                                                            class="rev-slidebg" data-no-retina>
                                                         <!-- <div class="tp-caption   tp-resizeme" id="slide-8-layer-1"
                                                             data-x="center" data-hoffset="" data-y="center"
                                                             data-voffset="106" data-width="['auto']"
@@ -983,7 +985,7 @@
                                                                 cultural sites, to the art of urban construction.
                                                                 This diversity makes the capital Riyadh
                                                                 the core of life in the Kingdom.</div>
-                                                                <br>
+                                                            <br>
                                                             <h3 class="gdlr-core-column-service-title gdlr-core-skin-title"
                                                                 style="text-transform: none ;word-spacing: 5px;color: black;">
                                                                 Much awaits you to explore in Riyadh.</h3>
@@ -1053,8 +1055,10 @@
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
-                                        <li class="menu-item"><a href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
+                                        <li class="menu-item"><a
+                                                href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1080,7 +1084,9 @@
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office No.25, Home Offices,
+                                        <li class="menu-item"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office
+                                                No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
                                                 Riyadh, Saudi Arabia</a></li>
                                     </ul>
