--- a/scholarships-ar.html
+++ b/scholarships-ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" class="no-js">
+<html lang="ar"  class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -50,7 +50,8 @@
                             <li class="menu-item"><a href="programs-ar.html">البرامج</a>
                             </li>
 
-                            <li class="menu-item current-menu-item"><a href="scholarships-ar.html">المنح الدراسية</a></li>
+                            <li class="menu-item current-menu-item"><a href="scholarships-ar.html">المنح الدراسية</a>
+                            </li>
                             <li class="menu-item"><a href="admission-ar.html">تسجيل</a></li>
                             <li class="menu-item"><a href="lifeinriyadh-ar.html">Life in Riyadh</a></li>
                             <li class="menu-item"><a href="collaboration-ar.html">Collaboration</a></li>
@@ -79,7 +80,7 @@
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh-ar.html">الحياة في الرياض</a>
                             <a class="kingster-top-bar-right-button " href="collaboration-ar.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button active-btn" href="gallery-ar.html">المعرض</a>
+                            <a class="kingster-top-bar-right-button " href="gallery-ar.html">المعرض</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="index.html"><img
@@ -95,7 +96,7 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr pbtm">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
@@ -109,15 +110,16 @@
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="admission-ar.html">تسجيل
                                         </a></li>
-                                    <li class="menu-item menu-item-home current-menu-item kingster-normal-menu"><a href="scholarships-ar.html">المنح
+                                    <li class="menu-item menu-item-home current-menu-item kingster-normal-menu"><a
+                                            href="scholarships-ar.html">المنح
                                             الدراسية</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu">
                                         <a href="programs-ar.html" class="sf-with-ul-pre">البرامج</a>
 
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a
-                                            href="services-ar.html" class="sf-with-ul-pre">خدماتنا</a>
+                                    <li class="menu-item kingster-normal-menu"><a href="services-ar.html"
+                                            class="sf-with-ul-pre">خدماتنا</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu"><a href="about-us-ar.html"
                                             class="sf-with-ul-pre">من نحن</a>
@@ -144,9 +146,9 @@
                 <div class="kingster-page-title-container kingster-container">
                     <div class="kingster-page-title-content kingster-item-pdlr">
                         <div class="gdlr-core-title-item-title-wrap clearfix centerdiv">
-                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title4"
-                                style="font-size: 55px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: uppercase ;color: #EB8223 ;background-color: white;padding: 20px 40px 20px 40px;width: fit-content;">
-                                Scholarships</h3>
+                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title4 scholar-ar">
+                                الــمــنــح الــدراسـيــة
+                            </h3>
                         </div>
                     </div>
                 </div>
@@ -158,29 +160,23 @@
                     style="background-image: url(img/scholarships-bg.jpg);background-repeat: no-repeat;background-size: cover;height: 1675px;">
                     <div class="gdlr-core-pbf-section-container gdlr-core-container clearfix">
                         <div class="gdlr-core-pbf-element">
-                            <div class="gdlr-core-blog-item gdlr-core-item-pdb clearfix  gdlr-core-style-blog-image"
+                            <div class="gdlr-core-blog-item gdlr-core-item-pdb clearfix ar-float gdlr-core-style-blog-image"
                                 style="padding:40px 40px 40px 40px;">
-                                <p class="p-about text5" style="font-size: 1.2rem;">Raffles Design Institute is proud to
-                                    offer
-                                    scholarships to international and domestic students, rewarding
-                                    interested, qualified and talented applicants on merit.<br>
-                                    Please note that competition for scholarships is usually intense. In order to be
-                                    able to maintain your
-                                    scholarship, your overall grade must remain of an average A.<br>
-                                    We do not tolerate frequent absences, and students must attend all classes.</p>
+                                <p dir="rtl" class="p-about text5 ar-float ar-space" style="font-size: 1.2rem;">
+                                    يُقدم معهد رافلز للطالبات فرصة الحصول على منح دراسية في مختلف تخصصات التصميم المقدمة
+                                    في المعهد<br>
+                                    يرجى ملاحظة أن المنافسة على المنح الدراسية عادة ما تكون شديدة، لكي تتمكني من الحفاظ
+                                    على المنحة الدراسية الخاصة بكِ، <br>يجب أن تظل درجتك الإجمالية عالية (A)<br>
+                                    نحن لا نتسامح مع الغياب المتكرر بدون أعذار، كما يجب على الطالبات حضور جميع الفصول
+                                    الدراسية
+                                </p>
                                 <br>
-                                <h5 class="title6" style="margin-bottom: 25px;">Scholarships Requirements:</h5>
-                                <p class="p-about">
-                                    - Overall final grade (from %95 to %99)
-                                </p>
-                                <p class="p-about">
-                                    - Maintaining grade within the average of A
-                                </p>
-                                <p class="p-about">
-                                    - Passing the English language test
-                                </p>
-                                <p class="p-about">
-                                    - Passing the interview in person
+                                <h5 class="title6" style="margin-bottom: 25px;">متطلبات المنحة الدراسية</h5>
+                                <p dir="rtl" class="p-about ar-float ar-space">
+                                    - الدرجة النهائية الإجمالية ( من 95% إلى 99% )<br><br>
+                                    - الحصول على تقدير عالي (A)<br><br>
+                                    - اجتياز اختبار اللغة الإنجليزية<br><br>
+                                    - اجتياز المقابلة شخصية
                                 </p>
                             </div>
                         </div>
