--- a/about-us-ar.html
+++ b/about-us-ar.html
@@ -81,7 +81,7 @@
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh-ar.html">الحياة في الرياض</a>
                             <a class="kingster-top-bar-right-button " href="collaboration-ar.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button active-btn" href="gallery-ar.html">المعرض</a>
+                            <a class="kingster-top-bar-right-button " href="gallery-ar.html">المعرض</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="index.html"><img
