--- a/admission.html
+++ b/admission.html
@@ -88,7 +88,7 @@
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh.html">Life In Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button active-btn" href="gallery.html">Gallery</a>
+                            <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
