--- a/jewelery-design-ar.html
+++ b/jewelery-design-ar.html
@@ -289,7 +289,7 @@
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh.html">Life In Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button active-btn" href="gallery.html">Gallery</a>
+                            <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="#"><img
@@ -305,7 +305,7 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr pbtm">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
@@ -316,12 +316,6 @@
                                 <ul id="menu-main-navigation-1" class="sf-menu">
                                     <li class="menu-item menu-item-home kingster-normal-menu">
                                         <a href="index.html" class="sf-with-ul-pre">Home</a>
-                                        <!-- <ul class="sub-menu">
-                                            <li class="menu-item menu-item-home" data-size="60"><a
-                                                    href="home.html">Homepage 1</a></li>
-                                            <li class="menu-item" data-size="60"><a href="index.html">Homepage
-                                                    2</a></li>
-                                        </ul> -->
                                     </li>
                                     <li class="menu-item kingster-normal-menu"><a href="about-us.html"
                                             class="sf-with-ul-pre">About Us</a>
