--- a/services-ar.html
+++ b/services-ar.html
@@ -81,7 +81,7 @@
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh-ar.html">الحياة في الرياض</a>
                             <a class="kingster-top-bar-right-button " href="collaboration-ar.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button active-btn" href="gallery-ar.html">المعرض</a>
+                            <a class="kingster-top-bar-right-button " href="gallery-ar.html">المعرض</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="index.html"><img
@@ -97,7 +97,7 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr pbtm">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
