--- a/about-us.html
+++ b/about-us.html
@@ -582,7 +582,7 @@
                                                         data-aos="fade-left" data-aos-duration="500"
                                                         data-aos-delay="300">
                                                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-                                                            id="h3_983a_22">Cheif Executive Officer</h3>
+                                                            id="h3_983a_22">Chief Executive Officer</h3>
                                                         <p class="p-about text4">PhD Holder from The American Graduate School
                                                             of
                                                             International Relations and Diplomacy in Paris,
@@ -657,40 +657,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-wrapper " id="div_983a_21">
-                        <div class="gdlr-core-pbf-background-wrap" id="div_983a_22"></div>
+                    <div class="gdlr-core-pbf-wrapper " id="div_983a_29">
+                        <div class="gdlr-core-pbf-background-wrap" id="div_983a_30b"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " id="div_983a_23"
-                                        style="height: 480px;">
-                                        <div class="gdlr-core-pbf-background-wrap" id="div_983a_24"></div>
-                                        <div
-                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content vision">
-                                            <!-- <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-left-align">
-                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
-                                                        id="div_983a_25"><img src="upload/about-icon-1.png" alt=""
-                                                            width="65" height="65" title="about-icon-1" /></div>
-                                                </div>
-                                            </div> -->
+                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-5">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values4">
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-                                                    id="div_983a_26">
+                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" id="div_983a_26">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title5"
-                                                            data-aos="fade-right" data-aos-duration="500"
-                                                            id="h3_983a_4">Vision</h3>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title5 aos-init" data-aos="fade-right" data-aos-duration="500" id="h3_983a_4">Vision</h3>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                    <div class="gdlr-core-text-box-item-content" id="div_983a_27">
-                                                        <p data-aos="fade-right" data-aos-duration="500"
-                                                            class="p-about text4">We are committed to fostering our students'
+                                                <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align pad3">
+                                                    <div data-aos="fade-right" data-aos-duration="500" class="gdlr-core-text-box-item-content aos-init" id="div_983a_27">
+                                                        <p class="p-about text4">We are committed to fostering our students'
                                                             love
                                                             for learning, encouraging them to try new things,
                                                             and giving them a solid foundation to build a bright
@@ -704,19 +688,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  gdlr-core-column-extend-right"
-                                        style="height: 480px;">
-                                        <div class="gdlr-core-pbf-background-wrap" data-aos="fade-left"
-                                            data-aos-duration="800">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                id="div_983a_28"></div>
-                                        </div>
-                                        <div
-                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
+                                            <div class="gdlr-core-pbf-element">
+                                                <img src="img/about/about us 4-02.png" alt="" class="objective-img2 aos-init aos-animate" data-aos="fade-left" data-aos-duration="800">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
