--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="img/raffles-logo2.png" alt="" /></a>
+                        <a class="" href="index.html"><img src="img/raffles-logo.png" class="logomob" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -250,7 +250,7 @@
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
                                 <div class="gdlr-core-pbf-column gdlr-core-column-10 gdlr-core-column-first"
                                     data-skin="Column White">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-1"
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-1 programs-index"
                                         style="padding: 70px 0px 70px 0px;" data-sync-height="column-height"
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
@@ -283,7 +283,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-10" data-skin="Column White">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-2"
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-2 programs-index"
                                         style="padding: 70px 0px 70px 0px;" data-sync-height="column-height"
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
@@ -318,7 +318,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-10" data-skin="Column White">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-2"
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-2 programs-index"
                                         style="padding: 70px 0px 70px 0px;" data-sync-height="column-height"
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
@@ -352,7 +352,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-10" data-skin="Column White">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-3"
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-3 programs-index"
                                         style="padding: 70px 0px 70px 0px;" data-sync-height="column-height"
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
@@ -385,7 +385,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-10" data-skin="Column White">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-4"
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-4 programs-index"
                                         style="padding: 70px 0px 70px 0px;" data-sync-height="column-height"
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
@@ -418,7 +418,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-10" data-skin="Column White">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-4"
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  slider-link-4 programs-index"
                                         style="padding: 70px 0px 70px 0px;" data-sync-height="column-height"
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
@@ -581,7 +581,7 @@
                                             id="div_1dd7_75">
                                             <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
                                                 id="div_1dd7_76">
-                                                <a class=" gdlr-core-js " href="img/videos/raffles3b.mp4"><img
+                                                <a class=" gdlr-core-js " href="img/videos/raffles3.mp4"><img
                                                         src="img/icon-play.png" alt="" width="82" height="82"
                                                         title="icon-play" /></a>
                                             </div>
@@ -637,12 +637,15 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/course.webp" alt="" style="width: 80%;" class="vision-img aos-init aos-animate width1 scale1" data-aos="fade-right" data-aos-duration="800">
+                                                <img src="img/course.webp" alt="" style="width: 80%;"
+                                                    class="vision-img aos-init aos-animate width1 scale1"
+                                                    data-aos="fade-right" data-aos-duration="800">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-10 width1" style="width: 60%;">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-10 width1"
+                                    style="width: 60%;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values2">
                                             <div class="gdlr-core-pbf-element">
@@ -667,13 +670,15 @@
                                                         style="font-size: 22px ;text-transform: none ;color: black ;font-weight: 300;">
                                                         <p class="text1" data-aos="fade-left" data-aos-duration="500"
                                                             data-aos-delay="100">
-                                                            <span style="font-weight: 500;">We are pleased to join us to learn together:</span> <br>
+                                                            <span style="font-weight: 500;">We are pleased to join us to
+                                                                learn together:</span> <br>
                                                             • The ways of using the sewing machine <br>
                                                             • The importance of the shuttle in the sewing process <br>
                                                             • The importance of tension <br>
                                                             • How to sew straight, curved lines and sharp angles <br>
                                                             • Sample sewing of a square and another round dome <br>
-                                                            • Sewing sample for front pockets, sample for zippers                                                        </p>
+                                                            • Sewing sample for front pockets, sample for zippers
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -983,23 +988,29 @@
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="facebook">
+                                <a href="https://www.facebook.com/RafflesKSA/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="facebook">
                                     <i class="fa fa-facebook"></i>
                                 </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="google-plus">
-                                    <i class="fa fa-google-plus"></i>
+                                <a href="https://www.tiktok.com/@rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="tiktok">
+                                    <i class="fa fa-tiktok"><svg xmlns="http://www.w3.org/2000/svg" height="1.18rem"
+                                            class="tiktok" viewBox="0 0 448 512">
+                                            <path
+                                                d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z" />
+                                        </svg></i>
                                 </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin">
-                                    <i class="fa fa-linkedin"></i>
-                                </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="skype">
-                                    <i class="fa fa-skype"></i>
-                                </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="twitter">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="instagram">
+                                <a href="https://www.instagram.com/rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="instagram">
                                     <i class="fa fa-instagram"></i>
+                                </a>
+                                <a href="https://www.snapchat.com/add/rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="snapchat">
+                                    <i class="fa fa-snapchat"></i>
+                                </a>
+                                <a href="https://twitter.com/rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="twitter">
+                                    <i class="fa fa-twitter"></i>
                                 </a>
                             </div>
                         </div>
