--- a/programs-ar.html
+++ b/programs-ar.html
@@ -31,7 +31,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="img/raffles-logo2.png" alt=""></a>
+                        <a class="" href="index.html"><img src="img/raffles-logo.png" class="logomob" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
