--- a/about-us-ar.html
+++ b/about-us-ar.html
@@ -39,7 +39,7 @@
                         class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
                         href="#kingster-mobile-menu"><span></span></a>
                     <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
-                        data-slide="left">
+                        data-slide="right">
                         <ul id="menu-main-navigation" class="m-menu">
                             <li class="menu-item"><a href="index-ar.html">الرئيسية</a>
 
